basic structure and main css

--- a/css/footer.css
+++ b/css/footer.css
@@ -3,12 +3,11 @@ html {
   min-height: 100%; }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px; }
+  /* Margin bottom by footer height */ }
 
 .footer {
-  position: absolute;
-  bottom: 0;
+  /*position: absolute;
+  bottom: 0;*/
   width: 100%;
   /* Set the fixed height of the footer here */
   height: 60px;
