--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 /*
-Syntax error: Undefined variable: "$primary".
+Syntax error: Undefined variable: "$link-hover-color".
         on line 14 of sass/main.scss
 
 9: }
@@ -7,11 +7,11 @@ Syntax error: Undefined variable: "$primary".
 11: 
 12: /* Links *\/
 13: a, a:hover, a:focus {
-14: color: $primary;
+14: 	color: $link-hover-color;
 15: }
 16: 
 17: body {
-18: 
+18: 	font-family: "Open Sans", Helvetica, Arial, sans-serif;
 19: 	color: $text;
 
 Backtrace:
@@ -66,4 +66,4 @@ sass/main.scss:14
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Syntax error: Undefined variable: \"$primary\".\A         on line 14 of sass/main.scss\A \A 9: }\A 10: \A 11: \A 12: /* Links */\A 13: a, a:hover, a:focus {\A 14: color: $primary;\A 15: }\A 16: \A 17: body {\A 18: \A 19: 	color: $text;"; }
+  content: "Syntax error: Undefined variable: \"$link-hover-color\".\A         on line 14 of sass/main.scss\A \A 9: }\A 10: \A 11: \A 12: /* Links */\A 13: a, a:hover, a:focus {\A 14: 	color: $link-hover-color;\A 15: }\A 16: \A 17: body {\A 18: 	font-family: \"Open Sans\", Helvetica, Arial, sans-serif;\A 19: 	color: $text;"; }
