--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -4,11 +4,11 @@ html {
 }
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 60px;
+  //margin-bottom: 60px;
 }
 .footer {
-  position: absolute;
-  bottom: 0;
+  /*position: absolute;
+  bottom: 0;*/
   width: 100%;
   /* Set the fixed height of the footer here */
   height: 60px;
