--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -25,6 +25,7 @@
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/navs";
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/navbar";
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/thumbnails";
+@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
 
 
 /* Font Awesome */
