--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -12,5 +12,5 @@ body {
   width: 100%;
   /* Set the fixed height of the footer here */
   height: 60px;
-  background-color: #f5f5f5;
+  background-color: #fff;
 }
