compile sass and update readme

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,42 +1,42 @@
 /* Bootstrap includes */
-@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
 
 // Core variables and mixins
-@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/variables";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/variables";
 
 // Rewrite some Bootstrap variables
 @import "variables";
 
-@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/mixins";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/mixins";
 
 // Reset and dependencies
-@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/normalize";
-@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/print";
-@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/glyphicons";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/normalize";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/print";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/glyphicons";
 
 // Core CSS
-@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/scaffolding";
-@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/type";
-@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/code";
-@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/grid";
-@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/tables";
-@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/forms";
-@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/buttons";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/scaffolding";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/type";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/code";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/grid";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/tables";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/forms";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/buttons";
 
 // Components
-@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/navs";
-@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/close";
-@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/dropdowns";
-@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/navbar";
-@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/thumbnails";
-@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
-@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/responsive-embed";
-@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/utilities";
-@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/component-animations";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/navs";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/close";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/dropdowns";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/navbar";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/thumbnails";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/responsive-embed";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/utilities";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/component-animations";
 
 
 /* Font Awesome */
-@import "bower_components/fontawesome/scss/font-awesome.scss";
+@import "../bower_components/fontawesome/scss/font-awesome.scss";
 
 
 /* Custom Styles */
